# traction

charts/pidi/: Chart.yaml  acapy_service-fail.yaml  internal-proxy-admin-api-service.yaml  values.yaml
charts/pidi/templates/: _helpers.tpl  acapy_deployment.yaml  acapy_service.yaml  internal-apim-admin-api-lb.yaml  internal-apim-agent-api-lb.yaml  secret-provider-class.yaml  tenant_proxy_deployment.yaml  tenant_proxy_service.yaml
docs/: __init__.py
plugins/: pyproject.toml
plugins/acapy_plugin_qa/: README.md  pyproject.toml
plugins/acapy_plugin_qa/acapy_plugin_qa/v1_0/: message_types.py  routes.py
plugins/acapy_plugin_qa/acapy_plugin_qa/v1_0/handlers/: answer_handler.py  question_handler.py
plugins/acapy_plugin_qa/acapy_plugin_qa/v1_0/messages/: answer.py  question.py
plugins/acapy_plugin_qa/acapy_plugin_qa/v1_0/models/: qa_exchange_record.py
plugins/acapy_plugin_qa/docker/: Dockerfile  README.md  default.yml
plugins/acapy_plugin_qa/int/: Dockerfile  docker-compose.yml
plugins/acapy_plugin_qa/int/tests/: test_qa.py
plugins/docker/: Dockerfile  README.md  default.yml  tenant-proxy.conf.template
scripts/: docker-compose.yml
services/aca-py/: ngrok-wait.sh
services/tenant-ui/: package.json
services/tenant-ui/frontend/: package.json
