[tool.poetry]
name = "acapy-plugin-qa"
version = "0.1.0"
description = "Q&A Protocol Plugin for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
packages = [
    { include = "acapy_plugin_qa" },
]

[tool.poetry.dependencies]
python = ">=3.6.13,<4.0"
aries-cloudagent = {version = ">=0.7.2,<=1.0.0rc1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.16.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
